# DataHarmonizer

./: .eslintrc.js  .gitignore  .gitmodules  .prettierignore  LICENSE  Makefile  README.md  biosample_slot_frame.tsv  data-old.js  data.js  data.tsv  data.txt  data2.js  data2.json  header_check.tsv  jsconfig.json  linkml.html  linkml.js  main.css  main.html  main.js  make_data.py  minas-dataharmonizer-header.txt  mixs_packages_x_slots.py  modular_gd.py  package-lock.json  package.json  playwright.config.js  pyproject.toml  reference.html  reference_template.html  requirements.txt  test_sntc.py  use_modular_gd.py  use_modular_gd.yaml
docs/: DataHarmonizer Template Constraints.md  README_1_to_many.md  README_developer.md  README_quality_assurance.md  README_schema_editor.md  README_schema_yaml_loading.md  README_user_manual.md  ROADMAP.md  index.html  main.css  main.html
docts/: index.html
example input/: invalid test data.csv  valid test data.csv  valid test data.tsv  valid test data.xlsx
exampleInput/: invalidTestData.csv  validTestData.csv  validTestData.tsv  validTestData.xlsx
extras/: counting_frame.tsv
freezes/: range_serializastion_tabulation.txt
images/: editCopyPasteDelete.webm  linkml_schema.drawio
lib/: .babelrc.json  AppContext.js  DHWrapper.js  DataHarmonizer.js  DatetimeEditor.js  FieldMapper.js  Footer.js  HelpSidebar.css  HelpSidebar.js  SchemaEditor.js  Toolbar.js  Validator.js  contentModals.html  data-harmonizer.css  fieldDescriptionsModal.html  i18n.js  index.js  rollup.config.js  specifyHeadersModal.html  toolbar.css  toolbar.html  toolbarGettingStarted.js  unmappedHeadersModal.html
linkml_round_trips/: get_dependencies.py  interleave_mergeds.py  just_exacts.py  linkml_to_dh_light.py  mixs_package_classes.py  modular_gd.py  soil.yaml  soil_nmdc_template_compiled.py
notebooks/: sandbox.ipynb
script/: README_compare_schemas.md  README_diff_schemas.md  README_menu_manager.md  README_update_templates.md  adjust_keys.py  compare_schemas.py  dataharmonizer_templates.xlsx  dev_notes.txt  dh-validate.py  diff_schemas.py  export.js  export_utils.js  field_rules.js  file_utils.js  induce_schema.cjs  linkml.py  main.js  main_linkml.js  make_data.py  make_linkml.py  menu_manager.py  oca_bundle.json  oca_hub_to_linkml.py  oca_to_linkml.py  schema_to_container.py  tabular_to_schema.py  textToTitle.bash  update_templates.py  upgrade.py  validation.js
template/: export.js  menu.js  reference_template.html
tests/: Validator.test.js  datatypes.test.js  fields.test.js  test_sntc.py  (+3 more)
(+575 files in other folders)
